# tantivy-viewer

./: Cargo.toml  README.md
src/: debug.rs  fields.rs  lib.rs  main.rs  reconstruct.rs  space_usage.rs  term_docs.rs  top_terms.rs
templates/: configure.hbs  debug.hbs  field_details.hbs  field_picker.hbs  index.hbs  reconstruct.hbs  search.hbs  segment_picker.hbs  skeleton.hbs  space_usage.hbs  term_docs.hbs  top_terms.hbs
