[package]
authors = ["Jason Wolfe <jasonwolfe@utexas.edu>"]
name = "tantivy-viewer"
version = "0.1.0"
[dependencies]
byteorder = "1.2.3"
clap = "2.31.2"
fst = "0.3.0"
handlebars = "0.32.4"
handlebars-iron = "0.26.2"
iron = "0.6.0"
params = "0.8.0"
router = "0.6.0"
serde = "1.0.57"
serde_derive = "1.0.59"
serde_json = "1.0.17"
tantivy = { git = "https://github.com/tantivy-search/tantivy.git", branch = "staged_collector_with_multi" }
