[package]
authors = ["Jason Wolfe <jasonwolfe@utexas.edu>"]
name = "tantivy-viewer"
version = "0.1.0"
[dependencies]
actix-web = "0.6.12"
byteorder = "1.2.3"
clap = "2.31.2"
cookie = "0.10.1"
downcast = "0.9.2"
env_logger = "0.5.10"
failure = "0.1.1"
failure_derive = "0.1.1"
fst = "0.3.0"
handlebars = "0.32.4"
itertools = "0.7.8"
log = "0.4.2"
pretty-bytes = "0.2.2"
serde = "1.0.57"
serde_derive = "1.0.59"
serde_json = "1.0.17"
url = "1.7.0"

[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy.git"
rev = "9764e0fda475ca9f02ca609eb594493bed630506"
